<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tickets">

    <fragment
        android:id="@+id/nav_tickets"
        android:name="ca.qc.cstj.tenretni.presentation.ui.tickets.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets" >
        <action
            android:id="@+id/action_nav_tickets_to_nav_detail_ticket"
            app:destination="@id/nav_detail_ticket" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail_ticket"
        android:name="ca.qc.cstj.tenretni.presentation.ui.tickets.DetailTicketFragment"
        android:label="@string/titleTicket"
        tools:layout="@layout/fragment_detail_ticket" >
        <action
            android:id="@+id/action_nav_detail_ticket_to_mapsActivity"
            app:destination="@id/mapsActivity" />
        <argument
            android:name="href"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_detail_ticket_to_QRFragment"
            app:destination="@id/QRFragment" />
    </fragment>

    <activity
        android:id="@+id/mapsActivity"
        android:name="ca.qc.cstj.tenretni.presentation.ui.map.MapsActivity"
        android:label="@string/title_activity_maps"
        tools:layout="@layout/activity_maps" >
        <argument
            android:name="position"
            app:argType="com.google.android.gms.maps.model.LatLng" />
        <argument
            android:name="customerName"
            app:argType="string" />
    </activity>

    <fragment
        android:id="@+id/nav_gateways"
        android:name="ca.qc.cstj.tenretni.presentation.ui.gateways.GatewaysFragment"
        android:label="@string/title_gateways"
        tools:layout="@layout/fragment_gateways" >
        <action
            android:id="@+id/action_nav_gateways_to_nav_detail_gateway"
            app:destination="@id/nav_detail_gateway" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail_gateway"
        android:name="ca.qc.cstj.tenretni.presentation.ui.gateways.DetailGatewayFragment"
        android:label="@string/titleGateway"
        tools:layout="@layout/fragment_detail_gateway" >
        <argument
            android:name="href"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_network"
        android:name="ca.qc.cstj.tenretni.presentation.ui.network.NetworksFragment"
        android:label="@string/title_network"
        tools:layout="@layout/fragment_networks" />
    <fragment
        android:id="@+id/QRFragment"
        android:name="ca.qc.cstj.tenretni.presentation.ui.qr.QRFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_q_r" >
        <argument android:name="customerId" />
        <argument android:name="href" />
    </fragment>

</navigation>